add admin commit

--- a/Shopping_Application/src/main/resources/templates/Admin/UserDetails.html
+++ b/Shopping_Application/src/main/resources/templates/Admin/UserDetails.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<section>
-		<div class="container margin-class">
+		<div class="container-fluid margin-class">
 			<div class="row">
 				<div class="col-md-12">
 					<div class="card">
