--- a/Shopping_Application/src/main/resources/templates/Admin/Base.html
+++ b/Shopping_Application/src/main/resources/templates/Admin/Base.html
@@ -26,7 +26,7 @@
           
           <div class="dropdown me-3">
 		    <button class="btn btn-primary bg-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-		        <i class="fa-solid fa-user-tie"></i> <span th:text="${admin.fullName}"></span>
+		        <i class="fa-solid fa-user-tie"></i> <span>[[${session.admin.fullName}]]</span>
 		    </button>
 		    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
 		        <a class="dropdown-item" th:href="@{/admin/profile}">Profile</a>
