--- a/Shopping_Application/src/main/resources/templates/Admin/EditAdmin.html
+++ b/Shopping_Application/src/main/resources/templates/Admin/EditAdmin.html
@@ -58,7 +58,7 @@
 								</div>
 								<div class="form-group mb-3">
 									<label for="image">Profile Image</label>
-									<input type="file" class="form-control" id="image" name="image" autocomplete="off" required="required" />
+									<input type="file" class="form-control" id="image" name="image" autocomplete="off" />
 								</div>
 								<div class="form-group mb-2">
 									<input type="submit" class="form-control btn btn-primary" value="Save"/>
