--- a/Shopping_Application/src/main/resources/templates/Admin/AddAdmin.html
+++ b/Shopping_Application/src/main/resources/templates/Admin/AddAdmin.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="Admin/Base::layout(~{::section})">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{Admin/Base::layout(~{::section})}">
 <head>
 	<meta charset="UTF-8" />
 	<title>Shopping Application</title>
@@ -24,54 +24,54 @@
 								<th:block th:text="${@IAdminServiceImpl.removeSessionMessage()}"></th:block>
 							</div>
 							<!--  alert message ends -->
-							<form th:action="@{/admin/saveAdminInformation}" method="post" enctype="multipart/form-data">
+							<form th:action="@{/admin/saveAdminInformation}" method="post" id="myForm" enctype="multipart/form-data">
 								<div class="row mb-2">
 									<div class="col-md-6">
 										<label for="fullName">Full Name</label>
-										<input type="text" class="form-control" id="fullName" autocomplete="off" name="fullName" required="required"/>
+										<input type="text" class="form-control" id="fullName" autocomplete="off" name="fullName"/>
 									</div>
 									<div class="col-md-6">
 										<label for="mobileNumber">Mobile Number</label>
-										<input type="number" class="form-control" maxlength="10" id="mobileNumber" autocomplete="off" name="mobileNumber" required="required" />
+										<input type="number" class="form-control" maxlength="10" id="mobileNumber" autocomplete="off" name="mobileNumber"/>
 									</div>
 								</div>
 								<div class="form-group mb-2">
 									<label for="email">Email</label>
-									<input type="email" class="form-control" id="email" autocomplete="off" name="email" required="required"/>
+									<input type="email" class="form-control" id="email" autocomplete="off" name="email"/>
 								</div>
 								<div class="row mb-2">
 									<div class="col-md-6">
 										<label for="address">Address</label>
-										<input type="text" class="form-control" id="address" autocomplete="off" name="address" required="required"/>
+										<input type="text" class="form-control" id="address" autocomplete="off" name="address"/>
 									</div>
 									<div class="col-md-6">
 										<label for="city">City</label>
-										<input type="text" class="form-control" id="city" name="city" autocomplete="off" required="required" />
+										<input type="text" class="form-control" id="city" name="city" autocomplete="off" />
 									</div>
 								</div>
 								<div class="row mb-2">
 									<div class="col-md-6">
 										<label for="state">State</label>
-										<input type="text" class="form-control" id="state" name="state" autocomplete="off" required="required"/>
+										<input type="text" class="form-control" id="state" name="state" autocomplete="off"/>
 									</div>
 									<div class="col-md-6">
 										<label for="pincode">Pincode</label>
-										<input type="number" class="form-control" id="pincode" name="pincode" autocomplete="off" required="required" />
+										<input type="number" class="form-control" id="pincode" name="pincode" autocomplete="off"  />
 									</div>
 								</div>
 								<div class="row mb-2">
 									<div class="col-md-6">
 										<label for="password">Password</label>
-										<input type="text" class="form-control" id="password" name="password" autocomplete="off" required="required"/>
+										<input type="text" class="form-control" id="password" name="password" autocomplete="off"/>
 									</div>
 									<div class="col-md-6">
 										<label for="confirmPassword">Confirm Password</label>
-										<input type="text" class="form-control" id="confirmPassword" name="confirmPassword" autocomplete="off" required="required"/>
+										<input type="text" class="form-control" id="confirmPassword" name="confirmPassword" autocomplete="off"/>
 									</div>
 								</div>
 								<div class="form-group mb-3">
 									<label for="image">Profile Image</label>
-									<input type="file" class="form-control" id="image" name="image" autocomplete="off" required="required" />
+									<input type="file" class="form-control" id="image" name="image" autocomplete="off" />
 								</div>
 								<div class="form-group mb-2">
 									<input type="submit" class="form-control btn btn-primary" value="Save"/>
@@ -82,6 +82,7 @@
 				</div>
 			</div>
 		</div>
+		<script th:src="@{/javascript/Register.js}"></script>
 	</section>
 </body>
 </html>
