--- a/Shopping_Application/src/main/resources/templates/Admin/Products.html
+++ b/Shopping_Application/src/main/resources/templates/Admin/Products.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="Admin/Base::layout(~{::section})">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{Admin/Base::layout(~{::section})}">
 <head>
 	<meta charset="UTF-8" />
 	<title>Shopping Application</title>
 </head>
 <body>
 	<section>
-		<div class="container margin-class">
+		<div class="container-fluid margin-class">
 			<div class="row">
 				<div class="col-md-12">
 					<div class="card">
