--- a/Shopping_Application/src/main/resources/templates/User/Order.html
+++ b/Shopping_Application/src/main/resources/templates/User/Order.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="User/Base::layout(~{::section})">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{User/Base::layout(~{::section})}">
 <head>
 	<meta charset="UTF-8" />
 	<title>Shopping Application</title>
@@ -7,7 +7,7 @@
 <body>
 	<section>
 		<div class="container" style="margin-top: 80px">
-			<form th:action="@{/user/orderStatus}" method="post">
+			<form th:action="@{/user/orderStatus}" id="myForm"  method="post">
 				<div class="row">
 					<div class="col-md-6">
 						<h2 class="text-center fs-3">Fill Address</h2>
@@ -19,41 +19,41 @@
 						<div class="row mb-3">
 							<div class="col-md-6">
 								<label for="firstName">First Name</label>
-								<input type="text" name="firstName" id="firstName" class="form-control" autocomplete="off" required/>
+								<input type="text" name="firstName" id="firstName" class="form-control" autocomplete="off"/>
 							</div>
 							<div class="col-md-6">
 								<label for="lastName">Last Name</label>
-								<input type="text" name="lastName" id="lastName" class="form-control" autocomplete="off" required/>
+								<input type="text" name="lastName" id="lastName" class="form-control" autocomplete="off"/>
 							</div>
 						</div>
 						<div class="row mb-3">
 							<div class="col-md-6">
 								<label for="email">Email</label>
-								<input type="email" name="email" id="email" class="form-control" autocomplete="off" required/>
+								<input type="email" name="email" id="email" class="form-control" autocomplete="off"/>
 							</div>
 							<div class="col-md-6">
 								<label for="mobibleNumber">Mobile Number</label>
-								<input type="number" name="mobileNumber" id="mobileNumber" class="form-control" autocomplete="off" required/>
+								<input type="number" name="mobileNumber" id="mobileNumber" class="form-control" autocomplete="off"/>
 							</div>
 						</div>
 						<div class="row mb-3">
 							<div class="col-md-6">
 								<label for="address">Address</label>
-								<input type="text" name="address" class="form-control" id="address" autocomplete="off" required/>
+								<input type="text" name="address" class="form-control" id="address" autocomplete="off"/>
 							</div>
 							<div class="col-md-6">
 								<label for="city">City</label>
-								<input type="text" name="city" class="form-control" id="city" autocomplete="off" required/>
+								<input type="text" name="city" class="form-control" id="city" autocomplete="off"/>
 							</div>
 						</div>
 						<div class="row mb-3">
 							<div class="col-md-6">
 								<label for="state">State</label>
-								<input type="text" name="state" class="form-control" id="state" autocomplete="off" required/>
+								<input type="text" name="state" class="form-control" id="state" autocomplete="off"/>
 							</div>
 							<div class="col-md-6">
 								<label for="pincode">Pincode</label>
-								<input type="number" name="pincode" class="form-control" id="pincode" autocomplete="off" required/>
+								<input type="number" name="pincode" class="form-control" id="pincode" autocomplete="off"/>
 							</div>
 						</div>
 					</div>
@@ -71,12 +71,12 @@
 									<tr>
 										<td>Delivery Fee</td>
 										<td>:</td>
-										<td>&#8377; 250</td>
+										<td>&#8377; 50</td>
 									</tr>
 									<tr>
 										<td>Tax</td>
 										<td>:</td>
-										<td>&#8377; 100</td>
+										<td>&#8377; 50</td>
 									</tr>
 									<tr class="border-top">
 										<td>Total Price</td>
@@ -90,7 +90,7 @@
 							<div class="card-body">
 								<div class="form-group mb-3">
 									<label for="payment">Select Payment Type</label>
-									<select class="form-select" aria-label="Default select example" id="payment" name="paymentType" required="required">
+									<select class="form-select" aria-label="Default select example" id="payment" name="paymentType" required>
 										<option selected>-- select ---</option>
 										<option value="COD">Cash On Delivery</option>
 										<option value="ONLINE">Online Payment</option>
@@ -105,6 +105,7 @@
 				</div>
 			</form>
 		</div>
+		<script th:src="@{/javascript/Order.js}"></script>
 	</section>
 </body>
 </html>
