--- a/Shopping_Application/src/main/resources/templates/User/ViewCart.html
+++ b/Shopping_Application/src/main/resources/templates/User/ViewCart.html
@@ -23,6 +23,9 @@
 									<th>Quantity</th>
 									<th>Total Price</th>
 								</tr>
+								<tr th:if="${carts.size()==0}">
+									<td colspan="6" class="text-center fs-5 text-danger fw-bold">Cart products are not avaliable</td>
+								</tr>
 								<tr th:each="cart, c : ${carts}">
 									<td th:text="${c.count}"></td>
 									<td>
@@ -37,13 +40,13 @@
 									</td>
 									<td th:text="${cart.totalPrice}"></td>
 								</tr>
-								<tr>
+								<tr th:if="${carts.size()!=0}">
 									<td colspan="4"></td>
 									<td class="fw-bold">Total Price</td>
 									<td class="fw-bold text-danger">&#8377;<span th:text="${totalOrderPrice}"></span></td>
 								</tr>
 							</table>
-							<div class="text-center">
+							<div class="text-center" th:if="${carts.size()!=0}">
 								<a th:href="@{/user/order}" class="btn btn-warning">Proceed Payment</a>
 							</div>
 						</div>
