--- a/Shopping_Application/src/main/resources/templates/Admin/AddAdmin.html
+++ b/Shopping_Application/src/main/resources/templates/Admin/AddAdmin.html
@@ -16,11 +16,15 @@
 						<div class="card-body">
 							<!-- alert message starts -->
 							<div class="alert alert-success" th:if="${session.successMsg}">
-								<p class="text-center fw-bold">[[${session.successMsg}]]</p>
+								<p class="text-center fw-bold">[[${session.successMsg}]] 😊😊😊</p>
 								<th:block th:text="${@IAdminServiceImpl.removeSessionMessage()}"></th:block>
 							</div>
 							<div class="alert alert-danger" th:if="${session.failMsg}">
-								<div class="text-center fw-bold">[[${session.failMsg}]]</div>
+								<div class="text-center fw-bold">[[${session.failMsg}]] 😡😡😡</div>
+								<th:block th:text="${@IAdminServiceImpl.removeSessionMessage()}"></th:block>
+							</div>
+							<div class="alert alert-danger" th:if="${session.warningMsg}">
+								<div class="text-center fw-bold">[[${session.warningMsg}]] 🤦🤦🤦</div>
 								<th:block th:text="${@IAdminServiceImpl.removeSessionMessage()}"></th:block>
 							</div>
 							<!--  alert message ends -->
