--- a/Shopping_Application/src/main/resources/templates/AdminLogin.html
+++ b/Shopping_Application/src/main/resources/templates/AdminLogin.html
@@ -29,7 +29,7 @@
 							</div>
 							<!-- alert messaage ends  -->
 						
-							<form th:action="@{/getAdminInfo}" method="post">
+							<form th:action="@{/admin/getAdminInfo}" method="post">
 								<div class="form-group mb-3">
 									<label for="email">Email</label>
 									<input type="text" id="email" class="form-control" name="email" autocomplete="off" required="required"/>
