--- a/Shopping_Application/src/main/resources/templates/User/MyOrders.html
+++ b/Shopping_Application/src/main/resources/templates/User/MyOrders.html
@@ -7,7 +7,7 @@
 <body>
 	<section>
 		<div class="container">
-			<div class="row" style="margin-top:80px">
+			<div class="row margin-class">
 				<div class="col-md-12">
 					<div class="card p-2">
 						<div class="card-head p-2 text-light">
@@ -33,6 +33,9 @@
 									<th>Price</th>
 									<th>Status</th>
 									<th>Action</th>
+								</tr>
+								<tr th:if="${productOrders.size()==0}">
+									<td colspan="7" class="text-center fs-5 text-danger fw-bold">Orders Are Not Avaliable 😐😐😐</td>
 								</tr>
 								<tr th:each="productOrder : ${productOrders}">
 									<th th:text="${productOrder.orderId}"></th>
@@ -61,6 +64,27 @@
 									</th:block>
 								</tr>
 							</table>
+							<div class="d-flex justify-content-center" th:if="${productOrders.size()!=0}">
+								<nav aria-label="Page navigation example">
+								  <ul class="pagination">
+								    <li class="page-item" th:if="${currentPage!=0}">
+								      <a class="page-link" th:href="@{'/user/myOrders?pageNo='+${currentPage-1}}" aria-label="Previous">
+								        <span aria-hidden="true">&laquo;</span>
+								        <span class="sr-only">Previous</span>
+								      </a>
+								    </li>
+								    <li class="page-item" th:each=" page : ${#numbers.sequence(1, totalPages)}" th:classappend="${currentPage == page-1 ? 'active' : ''}">
+								    	<a class="page-link" th:href="@{'/user/myOrders?pageNo='+${page-1}}" th:text="${page}"></a>
+								    </li>
+								    <li class="page-item" th:if="${currentPage+1!=totalPages}">
+								      <a class="page-link" th:href="@{'/user/myOrders?pageNo='+${currentPage+1}}" aria-label="Next">
+								        <span aria-hidden="true">&raquo;</span>
+								        <span class="sr-only">Next</span>
+								      </a>
+								    </li>
+								  </ul>
+								</nav>
+							</div>
 						</div>
 					</div>
 				</div>
