--- a/Shopping_Application/src/main/resources/templates/User/Products.html
+++ b/Shopping_Application/src/main/resources/templates/User/Products.html
@@ -40,7 +40,7 @@
 						</div>
 						<div class="card-body">
 							<div class="row">
-								<th:block th:if="${products.size>0}">
+								<th:block th:if="${products.size()>0}">
 									<div class="col-md-3" th:each="product : ${products}">
 										<div class="card shadow p-3 mb-5 bg-body rounded">
 											<div class="card-body text-center">
@@ -57,8 +57,17 @@
 											</div>
 										</div>
 									</div>
+									<div class="d-flex justify-content-center mt-2" th:if="${isSearch==false}">
+										<nav aria-label="Page navigation example">
+										  <ul class="pagination">
+										    <li class="page-item" th:if="${currentPage!=0}"><a class="page-link" th:href="@{'/user/products?pageNo='+${currentPage-1}}">Previous</a></li>
+										    <li class="page-item" th:each="i:${#numbers.sequence(1, totalPages)}" th:classappend="${currentPage==i-1? 'active' : ''}"><a class="page-link" th:href="@{'/user/products?pageNo='+${i-1}}">[[${i}]]</a></li>
+										    <li class="page-item" th:if="${currentPage+1!=totalPages}"><a class="page-link" th:href="@{'/user/products?pageNo='+${currentPage+1}}">Next</a></li>
+										  </ul>
+										</nav>
+									</div>
 								</th:block>
-								<th:block th:unless="${products.size>0}">
+								<th:block th:unless="${products.size()>0}">
 									<h4 class="text-center fs-5 text-danger fw-bold">Products Not Avaliable</h4>
 								</th:block>
 							</div>
