--- a/Shopping_Application/src/main/resources/templates/User/Order.html
+++ b/Shopping_Application/src/main/resources/templates/User/Order.html
@@ -90,7 +90,7 @@
 							<div class="card-body">
 								<div class="form-group mb-3">
 									<label for="payment">Select Payment Type</label>
-									<select class="form-select" aria-label="Default select example" id="payment" name="paymentType" required>
+									<select class="form-select" aria-label="Default select example" id="payment" name="paymentType">
 										<option value="">-- select ---</option>
 										<option value="COD">Cash On Delivery</option>
 										<option value="ONLINE">Online Payment</option>
